fixing some issues with collapse

--- a/src/core/styles/index.css
+++ b/src/core/styles/index.css
@@ -289,7 +289,7 @@
   text-align: left;
 }
 
-.collapse:not(.show) {
+.formHead-wrapper .collapse:not(.show) {
   display: none;
 }
 
